--- a/GuitarTool/res/layout/main.xml
+++ b/GuitarTool/res/layout/main.xml
@@ -7,11 +7,29 @@
    
 
     <Button
-        android:id="@+id/bTest"
+        android:id="@+id/bEye"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageView1"
         android:layout_below="@+id/imageView1"
-        android:text="TEST BUTTON" />
+        android:text="Eye" />
+
+    <Button
+        android:id="@+id/bMilk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bTest"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:text="Milk" />
+
+    <Button
+        android:id="@+id/bStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_marginTop="212dp"
+        android:layout_toRightOf="@+id/bTest"
+        android:text="stop" />
 
 </RelativeLayout>
